добавлено получение истории формул
